<resources>
    <string name="app_name">Test</string>
    <string name="toolbar_back_text">back</string>
    <string name="edit_existing_details_fragment_tag">EditExistingDetailsFrag</string>
    <string name="cancel_item_id">cancel</string>
    <string name="save_item_id">save</string>
    <string name="username">Username</string>
    <string name="password_text">Password</string>
    <string name="sign_in_with_google">Sign in with Google+</string>
    <string name="connect_with">or connect with</string>
    <string name="login_button">Sign in</string>
    <string name="enter_text">Enter text...</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dumb_text">At least this part works, try the google sign in, its kinda nice</string>
</resources>
